# feedfold

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
crates/feedfold-adapters/: Cargo.toml
crates/feedfold-adapters/src/: claude.rs  lib.rs  rss.rs  youtube.rs
crates/feedfold-core/: Cargo.toml
crates/feedfold-core/src/: adapter.rs  config.rs  lib.rs  ranker.rs  storage.rs
crates/feedfold-daemon/: Cargo.toml
crates/feedfold-daemon/src/: main.rs
crates/feedfold-tui/: Cargo.toml
crates/feedfold-tui/src/: main.rs  opml.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  TASKS.md
scripts/: import-youtube-csv.sh  ralph.md  ralph.sh
