[package]
name = "feedfold-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Concrete SourceAdapter implementations (RSS, Atom, YouTube) for feedfold."

[dependencies]
feedfold-core = { workspace = true }
reqwest       = { workspace = true }
feed-rs       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
