[package]
name = "feedfold-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Terminal UI reader for feedfold."

[[bin]]
name = "feedfold"
path = "src/main.rs"

[dependencies]
feedfold-core     = { workspace = true }
feedfold-adapters = { workspace = true }
anyhow            = { workspace = true }
tokio             = { workspace = true }
clap              = { workspace = true }
chrono            = { workspace = true }
reqwest           = { workspace = true, features = ["blocking"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
open = "5.3.3"
viuer = { version = "0.9.2", features = ["print-file"] }
